# NeuralNetwork

./: .gitignore  CMakeLists.txt  Main.cpp  README.md
include/: NeuralNetwork.hpp
